<resources>
    <string name="app_name">Peduli Presensi</string>
    <string name="title_home">Home</string>
    <string name="home">Beranda</string>
    <string name="attendance">Presensi</string>
    <string name="attendancDialog">Presensi dapat dilakukan</string>
    <string name="attendancLate">Presensi terlambat </string>
    <string name="attendancLate2">Terlambat lebih dari 1 jam</string>
    <string name="attendancLate3">Terlambat kurang dari 2 jam</string>
    <string name="attendancMessage">ketuk tombol <bold>"presensi sekarang"</bold> untuk memulai presensi Anda</string>
    <string name="attendancNow">Presensi sekarang</string>
    <string name="histori">Histori</string>
    <string name="profile">Akun</string>
    <string name="welcome">Selamat datang,</string>
    <string name="user">User</string>
    <string name="user_unset">Atur username Anda</string>
    <string name="check_in">Ketuk untuk mulai presensi</string>
    <string name="scanning_location">Menghitung jarak lokasi Anda</string>
    <string name="check_in_success">Check-in success</string>
    <string name="btn_attendance">btn attendance</string>
    <string name="email">Email</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="forgot_password">lupa password?</string>
    <string name="register">Registrasi</string>
    <string name="logout">Keluar</string>
    <string name="image_app">image app</string>
    <string name="email_verification">Verifikasi Email</string>
    <string name="reset_password">Reset Password Anda</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="update">Update Foto</string>
    <string name="change_password">Ganti Password</string>
    <string name="new_password">password baru</string>
    <string name="register_succes">Registrasi Berhasil!</string>
    <string name="update_profile_succes">Pembaruan profil</string>
    <string name="update_email_succes_desc">Email Anda Berhasil diperbarui.</string>
    <string name="update_password_succes_desc">Silahkan login dengan password baru Anda</string>
    <string name="register_succes_desc">Silahkan aktivasi email Anda di menu profil</string>
    <string name="btn_reset_pass">Reset password</string>
    <string name="add_email">Masukan email</string>
    <string name="input_email">Masukan Email</string>
    <string name="settings">Pengaturan Akun</string>
    <string name="settings_info">Lakukan manajemen akun Anda seperti ganti email dan password, semua peraturan akan tersimpan kedalam server aplikasi.</string>
    <string name="change_email">Ganti Email</string>
    <string name="tv_verified">Email terverifikasi</string>
    <string name="tv_unverified">Belum verifikasi email</string>
    <string name="reset_email">Masukan Email Baru</string>
    <string name="update_email">Update Email</string>
    <string name="confirm">Konfirmasi</string>
    <string name="add_new_password">Masukan Password Baru</string>
    <string name="have_account">Punya Akun?</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="date_attendance">tanggal presensi:</string>
    <string name="get_data">Mengambil data</string>
    <string name="email_active">* Pastikan email Anda aktif</string>
    <string name="username_active">Username digunakan untuk identifikasi presensi Anda</string>
    <string name="email_registered">*pastikan email Anda telah terdaftar</string>
    <string name="password_length">*Password harus lebih dari  8 karakter</string>
    <string name="add_password">*Masukan password akun Anda</string>
    <string name="add_name">Nama</string>
    <string name="processing_data">Memproses data</string>
    <string name="attendance_online">PRESENSI ONLINE</string>
    <string name="government">Pemerintah Desa Warureja</string>
    <string name="version_app">Version app 1.0.0</string>
    <string name="helper_email">* Verifikasi email Anda untuk dapat melakukan reset password dan hal penting lainya.</string>
    <string name="about">Tentang Aplikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_app">Aplikasi presensi pegawai pemerintah desa Warureja. Kami berharap aplikasi ini lebih dari implementasi kode</string>
    <string name="build_with">Limitless dedication</string>
    <string name="dev_1">Guna Dermawan</string>
    <string name="android_developer">Android Developer</string>
    <string name="signout">Keluar Aplikasi</string>
    <string name="signout_message">Apakah Anda yakin untuk keluar?</string>
    <string name="info_profile_message">Berisi informasi detail mengenai akun Anda. Verifikasi email Anda untuk dapat melakukan reset password dan hal penting lainya. </string>
    <string name="signout_possitive">Ya</string>
    <string name="signout_negative">Batal</string>
    <string name="report_bug">Laporkan Masalah Aplikasi</string>
    <string name="image_weather">image weather</string>
    <string name="your_emails">Email</string>
    <string name="banner_application">banner_application</string>
    <string name="image_of_content">image of Content</string>
    <string name="news1">Buat Aplikasi Lapor Gub, Cara Ganjar Respons Aduan Pungli di Jateng</string>
    <string name="news2">Polres Tegal Kota Gelar Vaksinasi Covid-19 Gratis Tanpa Surat Domisili</string>
    <string name="news3">Layanan Aduan Lapor Bupati Tegal Hadir di Versi Android</string>
    <string name="tvDateNews1">Jawa Pos | 2 Menit yang lalu</string>
    <string name="tvDateNews2">Kompas | 15 Menit yang lalu</string>
    <string name="tvDateNews3">Republika | 1 Jam yang lalu</string>
    <string name="news_selected">#BeritaPilihan</string>
    <string name="icon_news">icon news</string>
    <string name="features_extra">Fitur Eksternal</string>
    <string name="icon_external_app">icon eksternal app</string>
    <string name="info_icon_1">Lapor Gubernur</string>
    <string name="info_icon_2">Lapor Bupati</string>
    <string name="info_icon_3">Info Covid-19</string>
    <string name="info_icon_4">PPID Kab. Tegal</string>
    <string name="info_icon_5">Portal Kab. Tegal</string>
    <string name="info_icon_6">Disdukcapil Kab. Tegal</string>
    <string name="changeUsername">Ganti Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_username">Masukan username</string>
    <string name="update_username">update username</string>
    <string name="hint_username">masukan username</string>
    <string name="logo_goverment">logo government</string>
    <string name="username">Username</string>
    <string name="account_info">Info Akun</string>
    <string name="profile_info">Info Profil</string>
    <string name="image_info_profile">image info profile</string>
    <string name="imageview_info_settings">imageView info settings</string>
</resources>