<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
<<<<<<< HEAD
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/ic_finger"
        android:title="@string/presensi" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ice_history"
        android:title="@string/history" />
=======
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_finger"
        android:title="@string/attendance" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ice_history"
        android:title="@string/histori" />
>>>>>>> 3e7321ff5084aaf545687521783f15e6510092b5
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />

</menu>