<?xml version="1.0" encoding="utf-8"?>
<com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rippleBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    app:rb_color="@android:color/white"
    app:rb_duration="3000"
    app:rb_radius="32dp"
    app:rb_rippleAmount="6"
    app:rb_scale="6"
    tools:context=".ui.attendance.AttendanceFragment">

    <TextView
        android:id="@+id/tv_checkIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:maxLines="2"
        android:text="@string/check_in"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvScanning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_checkIn"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/scanning_balai_desa_warureja"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_CheckIn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/btn_attendance"
        android:src="@drawable/ic_finger_white" />

    <TextView
        android:id="@+id/tv_CheckInSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bg_checkin_success"
        android:paddingStart="68dp"
        android:paddingTop="14dp"
        android:paddingEnd="68dp"
        android:paddingBottom="14dp"
        android:text="@string/check_in_success"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</com.skyfishjy.library.RippleBackground>